--- a/demo/demo.html
+++ b/demo/demo.html
@@ -12,12 +12,6 @@
     <link rel="stylesheet" href="dist/theme/black.css">
     <link rel="stylesheet" href="plugin/highlight/monokai.css">
     <link rel="stylesheet" href="assets/css/demo.css">
-    <style>
-      :root {
-      	--r-background-color: #051525;
-      }
-      
-    </style>
   </head>
   <body>
     <div class="reveal"><a class="github-corner" href="https://github.com/martinomagnifico/reveal.js-appearance" target="blank" title="View source on GitHub">
@@ -28,7 +22,7 @@
         <section>
           <h1 class="animate__flipInX animate__slow">Appearance</h1>
           <h3 class="animate__fadeInDown animate__faster" data-delay="75" data-container-delay="700" data-split="letters">for Reveal.js</h3>
-          <div class="row fivegrid smallcircles"><img class="animate__shrinkIn" data-src="assets/img/1.jpg" data-delay="800"><img class="animate__shrinkIn" data-src="assets/img/2.jpg" data-delay="220"><img class="animate__shrinkIn" data-src="assets/img/3.jpg" data-delay="200"><img class="animate__shrinkIn" data-src="assets/img/4.jpg" data-delay="180"><img class="animate__shrinkIn" data-src="assets/img/5.jpg" data-delay="160">
+          <div class="row fivegrid smallcircles"><img class="demoimg smallcircle animate__shrinkIn" data-src="assets/img/1.jpg" data-delay="800"><img class="demoimg smallcircle animate__shrinkIn" data-src="assets/img/2.jpg" data-delay="220"><img class="demoimg smallcircle animate__shrinkIn" data-src="assets/img/3.jpg" data-delay="200"><img class="demoimg smallcircle animate__shrinkIn" data-src="assets/img/4.jpg" data-delay="180"><img class="demoimg smallcircle animate__shrinkIn" data-src="assets/img/5.jpg" data-delay="160">
           </div>
         </section>
         <section>
@@ -59,7 +53,7 @@
           </section>
           <section>
             <h3>Let images appear</h3>
-            <div class="row fivegrid"><img class="animate__flipInX" data-src="assets/img/1.jpg"><img class="animate__flipInX" data-src="assets/img/2.jpg"><img class="animate__flipInX" data-src="assets/img/3.jpg"><img class="animate__flipInX" data-src="assets/img/4.jpg"><img class="animate__flipInX" data-src="assets/img/5.jpg">
+            <div class="row fivegrid"><img class="demoimg animate__flipInX" data-src="assets/img/1.jpg"><img class="demoimg animate__flipInX" data-src="assets/img/2.jpg"><img class="demoimg animate__flipInX" data-src="assets/img/3.jpg"><img class="demoimg animate__flipInX" data-src="assets/img/4.jpg"><img class="demoimg animate__flipInX" data-src="assets/img/5.jpg">
             </div>
           </section>
           <section>
