--- a/demo/demo.html
+++ b/demo/demo.html
@@ -403,7 +403,7 @@
       
       // Initialize the deck
       let revealdeck = new Reveal(deck);
-      	revealdeck.initialize({
+      revealdeck.initialize({
       	history: true,
       	overview: true,
       	margin: 0.1,
@@ -411,7 +411,7 @@
       	center: true,
       	controlsTutorial: false,
       	appearance: {
-      		debug: false,
+      		debug: true,
       		appearparents: true,
       		hideagain: true,
       		appearevent: 'auto',
