--- a/demo/demo-markdown.html
+++ b/demo/demo-markdown.html
@@ -34,7 +34,15 @@
       Reveal.initialize({
       	margin: 0.1, maxScale: 1.8, width: 1080, height: 700,
       	history: true, center: true, controlsTutorial: false,
-      	plugins: [ RevealMarkdown, RevealHighlight, Appearance ]
+      	plugins: [ RevealMarkdown, RevealHighlight, Appearance ],
+      	appearance: {
+      		appearparents: true,
+      		hideagain: true,
+      		appearevent: 'auto',
+      		autoappear: true,
+      		autoelements: {'ul li': 'animate__fadeInLeft'},
+      		compatibility: false
+      	}
       });
     </script>
   </body>
