--- a/demo/demo-markdown.html
+++ b/demo/demo-markdown.html
@@ -40,8 +40,7 @@
       		hideagain: true,
       		appearevent: 'auto',
       		autoappear: true,
-      		autoelements: {'ul li': 'animate__fadeInLeft'},
-      		compatibility: false
+      		autoelements: {'ul li': 'animate__fadeInLeft'}
       	}
       });
     </script>
