Allow single quotes in data attribute JSON, add data-initdelay, fix documentation.

--- a/demo/demo-markdown.html
+++ b/demo/demo-markdown.html
@@ -36,10 +36,12 @@
       	history: true, center: true, controlsTutorial: false,
       	plugins: [ RevealMarkdown, RevealHighlight, Appearance ],
       	appearance: {
+      		debug: true,
       		appearparents: true,
       		hideagain: true,
       		appearevent: 'auto',
       		autoappear: true,
+      		convertToJSON: true,
       		autoelements: {'ul li': 'animate__fadeInLeft'}
       	}
       });
